static/mainpage.css
@import url('https://fonts.googleapis.com/css?family=Roboto');

body {
    font-family: "Roboto", sans-serif;
}

h1 {
    color: #6f7c7e;
    letter-spacing: 0.07em;
}

table {
    width: 340px;
    margin-top: 15px;
}

.signup-container {
    margin: auto;
    margin-top: 18vh;
    width: 340px;
    padding: 30px;
    border-radius: 6px;
    background-color: #eeeff3;
    box-shadow: 0 0 4px #4f4f4f;
    color: #b4bbcb;
}

.signup-field {
    width: 290px;
    font-family: "Roboto", sans-serif;
    border: 2px solid transparent;
    margin: 10px 0 10px;
    font-weight: bold;
    color: #787d88;
    background-color: #fff;
    padding: 10px 18px;
    border-radius: 6px;
    transition: border 120ms ease-in;
}



.signup-field::placeholder {
    color: #c3c8d5;
}

.signup-field:focus {
    outline: none;
    border: 2px solid #00be9c;
}

.submit-button {
    font-family: "Roboto", sans-serif;
    background-color: #00be9c;
    width: 330px;
    margin: 30px 0 10px;
    font-weight: bold;
    border-radius: 6px;
    font-size: 1.1em;
    padding: 14px 18px;
    color: #FFF;
    border: none;
    transition: background 120ms ease-in;
}

.submit-button:focus {
    outline: none;
}

.submit-button:hover{
    cursor: pointer;
    background-color: #17cfae;
}

.error {
    position: relative;
    right: -6px;
    top: -8px;
    color: #de2323;
    font-size: 0.8rem;
}

.welcome-container {
    position: relative;
    margin: auto;
    text-align: center;
    margin-top: 40vh;
}

.welcome-text {
    color: #00be9c;
    font-family: "Roboto", sans-serif;
    font-size: 4rem;
}

